--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ title: Rajendra Singh
 		I am currently working on porting MTC to ROS2. My goal is to continue researching in the field of robotics and learn more along the way.
 		<a href="/about">Read more about my life...</a></p>
 	</font>
-	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 	
+	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+	<img src="images/payload_quick.gif" style='height: 100%; width: 100%' align="center" border="0" HSPACE="0" VSPACE="10" />
 <!-- 	<br/><br/> -->
 <!-- 	<p><img src="images/rajendraFullPic2.jpg" height="30%" width="30%" align="left" border="1" HSPACE="30" VSPACE="10" /><br/>I'm an undergraduate student at <em>CSE, IIT Palakkad.</em> I'm passionate about vision-based robotics. I've participated in several robotics and ML related competitions. I was the former head of Robotics Club, IIT Palakkad. My major projects are based on the swarm, slam and vision-based pick and place. I am currently working on mobile manipulators based on ROS. My goal is to lead a robotics research lab and learn more about the field along the way. <a href="/about">Read more about my life...</a></p> -->
 <!-- 	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/> -->
