--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@ title: Rajendra Singh
 ---
 <div class="blurb">
 	<br/>
-	<h1> Welcome!  I'm Rajendra Singh</h1>
+	<h1> Hello World! We are giving wings to the search and rescue mission.</h1>
 <!-- 	height="230" width="185" -->
-	<font size="2.5"><p><img src="images/Profile_round_faceapp.jpg" style='height: 20%; width: 20%' align="left" border="0" HSPACE="30" VSPACE="10" />
-		<br/>I'm a B.Tech. graduate from the Department of Computer Science and Engineering, IIT Palakkad.
-		I have a passionate interest in Vision-based Robotics.
-<!-- 		I'm passionate about vision-based robotics. -->
-		I’m research-oriented, team player and looking forward to collaborate with an enthusiastic team or startup researching in this domain.
-		I've participated in several robotics and ML competitions. I was the former head of Robotics Club, IIT Palakkad.
-		My major projects are based on Swarm Robotics, Path planning, SLAM and Vision-based pick and place. 
-		I am currently working on porting MTC to ROS2. My goal is to continue researching in the field of robotics and learn more along the way.
-		<a href="/about">Read more about my life...</a></p>
+	<font size="2.5"><p><img src="images/GE_logo.png" style='height: 20%; width: 20%' align="left" border="0" HSPACE="30" VSPACE="10" />
+		<br/>During disasters like flood, avalanche and wildfire often people get stranded in tough and hard to reach terrains. Hence a quick and efficient search operation is required to locate all the stranded people to quickly rescue them. Traditional search operations are often time taking and lack coordination. Thus, an innovative solution is required to expedite search operations as human lives are at the stake! We designed an intelligent autonomous coordinative multi-UAV system that can quickly search for the people/animals in the affected regions.</p>
 	</font>
 	
 	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
