--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Rajendra Singh
 ---
 <div class="blurb">
 	<br/>
-	<h1> Hello World! We are giving wings to the search and rescue mission.</h1>
+	<h1> Giving wings to the search and rescue mission!</h1>
 <!-- 	height="230" width="185" -->
 	<font size="2.5"><p><img src="images/GE_logo.png" style='height: 20%; width: 20%' align="left" border="0" HSPACE="30" VSPACE="10" />
 		<br/>During disasters like flood, avalanche and wildfire often people get stranded in tough and hard to reach terrains. Hence a quick and efficient search operation is required to locate all the stranded people to quickly rescue them. Traditional search operations are often time taking and lack coordination. Thus, an innovative solution is required to expedite search operations as human lives are at the stake! We designed an intelligent autonomous coordinative multi-UAV system that can quickly search for the people/animals in the affected regions.</p>
