--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@ title: ABOUT ME
 <div class="blurb">
 	<h1>{{ page.title }}</h1>
 	<br/>
-	<h2>A Brief Background</h2>
-	<font size="2.5"><p>I was born in Rajsamand, Rajasthan, India in 1997, and brought up and educated there. I complete my secondary education from Rajsamand and higher secondary from Delhi Public School, Udaipur.</p>
+	<h2>Coming soon...</h2>
+<!-- 	<font size="2.5"><p>I was born in Rajsamand, Rajasthan, India in 1997, and brought up and educated there. I complete my secondary education from Rajsamand and higher secondary from Delhi Public School, Udaipur.</p>
 	<p>Since childhood days, I was popularly regarded as a gadget freak. As an aspiring technocrat, I firmly believe it is important to not only learn, but also understand, implement, develop and embrace the latest technology trends.</p>
 	<p>Apart from academics,I also maintain a <a href="https://www.youtube.com/channel/UCzNSEsxHfpq_84-EkU9CRnQ/videos?view_as=subscriber">YouTube channel</a> which hosts videos of my projects, interesting tech stuff I work on.</p>
 	</font>
@@ -17,6 +17,6 @@ title: ABOUT ME
 	I also headed the robotic club here and mentored many student project.
 	This involvement in various projects and proper guidance of professors(Specially Prof. Santa Mohan Kumar, M.E, IIT Palakkad and Chandra Shekar, CSE IIT Palakkad) further helped me to grow my passionate interest in the field of robotics.</p>
 	</font>		
-	<p><center><em><br><br<br>Good friends, Good Books and Good Robots, That's my ideal life.</em></center></p>
+	<p><center><em><br><br<br>Good friends, Good Books and Good Robots, That's my ideal life.</em></center></p> -->
 	
 </div><!-- /.blurb -->
