--- a/honours/index.html
+++ b/honours/index.html
@@ -5,6 +5,14 @@ title: Honours, awards and fellowships
 <div class="blurb">
 	<h1>{{ page.title }}</h1>
 	
+	<h2>Winner, Upscale21</h2>
+	<img src="images/opencv_spatial_ai_finalist.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
+	<hr/>
+	
+	<h2>Finalist, OpenCV Spacial AI Contest 2021-22</h2>
+	<img src="images/IEEE_Kerala_startup_mission.png" style='height: 100%; width: 100%; object-fit: contain'/>
+	<hr/>
+	
 	<h2>Winner, Kaizen Robotics competion</h2>
 	<img src="images/winner.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
