--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Rajendra Singh
 ---
 <div class="blurb">
 	<br/>
-	<h1> The Great Eagle</h1>
+	<h1> Great Eagle</h1>
 <!-- 	height="230" width="185" -->
 	<font size="4.5"><p><img src="images/GE_logo_no_name.gif" style='height: 50%; width: 50%' align="left" border="0" HSPACE="30" VSPACE="10" />
 		<br/><h2> Giving wings to the search and rescue mission!</h2>
