--- a/honours/index.html
+++ b/honours/index.html
@@ -5,6 +5,10 @@ title: Honours, awards and fellowships
 <div class="blurb">
 	<h1>{{ page.title }}</h1>
 	
+	<h2>Incubatee, Techin, IIT Palakkad</h2>
+	<img src="images/GE_Aarambh.png" style='height: 100%; width: 100%; object-fit: contain'/>
+	<hr/>	
+	
 	<h2>Winner, Upscale21</h2>
 	<img src="images/IEEE_Kerala_startup_mission.png" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
