--- a/about/index.html
+++ b/about/index.html
@@ -18,5 +18,6 @@ title: ABOUT ME
 	This involvement in various projects and proper guidance of professors(Specially Prof. Santa Mohan Kumar, M.E, IIT Palakkad and Chandra Shekar, CSE IIT Palakkad) further helped me to grow my passionate interest in the field of robotics.</p>
 	</font>		
 	<p><center><em><br><br<br>Good friends, Good Books and Good Robots, That's my ideal life.</em></center></p> -->
+	Contact: contact.greateagle@gmail.com
 	
 </div><!-- /.blurb -->
