--- a/honours/index.html
+++ b/honours/index.html
@@ -5,7 +5,7 @@ title: Honours, awards and fellowships
 <div class="blurb">
 	<h1>{{ page.title }}</h1>
 	
-	<h2>Incubatee, Techin, IIT Palakkad</h2>
+	<h2>Pre-Incubatee, Techin, IIT Palakkad</h2>
 	<img src="images/GE_Aarambh.png" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>	
 	
