--- a/honours/index.html
+++ b/honours/index.html
@@ -17,6 +17,10 @@ title: Honours, awards and fellowships
 	<img src="images/opencv_spatial_ai_finalist.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
 	
+	<h2>Select for Gurukul Cohort 3, 100X.VC</h2>
+	<img src="images/100x.png" style='height: 100%; width: 100%; object-fit: contain'/>
+	<hr/>
+	
 	<h2>Winner, Kaizen Robotics competion</h2>
 	<img src="images/winner.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
