--- a/honours/index.html
+++ b/honours/index.html
@@ -21,12 +21,12 @@ title: Honours, awards and fellowships
 	<img src="images/100x.png" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
 	
-	<h2>Winner, Kaizen Robotics competion</h2>
+<!-- 	<h2>Winner, Kaizen Robotics competion</h2>
 	<img src="images/winner.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
 	<hr/>
 		
 	<h2>Ranked 6th in Inter-IIT Tech meet 2017-18</h2>
 	<img src="images/interiit.jpg" style='height: 100%; width: 100%; object-fit: contain'/>
-	<hr/>
+	<hr/> -->
 	
 </div><!-- /.blurb -->
