--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,18 @@ title: PROJECTS
 		
 		<div class="project">
 			<div class="project_text">
+			<li>
+				<b> Compilation of various Pilot Project: UAV, SWARM, Computer Vision</b>
+			</li>
+			<font size="2"><em>2021-Present, Great Eagle Tech</em></font>
+			<p><font size="3"> Using computer vision based base GPS denied navigation for swarm of UAVs. Technology Used:- VIO, Fast Planner, Flocking, ByteTrack etc. </font></p>
+			</div>
+			<iframe style='width: 100%' height="720" src="https://youtu.be/nR4M5kubpvE" frameborder="0" allowfullscreen ng-show="showvideo" HSPACE="30" VSPACE="10"></iframe>
+		</div>
+		<br/><hr/><br/>
+		
+		<div class="project">
+			<div class="project_text">
 				<li>
 					<b>Q-learning based drone controller</b>
 				</li>
